--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NASymphony - Network Attached Storage</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Anton&family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "PT Serif", sans-serif;
       background-color: #333; 
       color: #F7EEDD;
       
@@ -18,7 +21,8 @@
     }
 
     header {
-      color: #008DDA; 
+      color: #008DDA;
+      font-family: "DM Serif Display", sans-serif; 
       background-image: url(bg.gif);
       background-size: cover;
       background-position: center;
@@ -65,6 +69,7 @@
     #features h2,
     #services h2,
     #developers h2{
+      font-family: "DM Serif Display", sans-serif;
       background-image: -webkit-linear-gradient(0deg,#41C9E2 30%, #ACE2E1 70% );
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -169,7 +174,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#" style="color: #008DDA; font-size: 25px;">NASymphony</a>
+      <a class="navbar-brand" href="index.html" style="color: #008DDA; font-size: 25px;">NASymphony</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
