--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
         <div class="col-md-4 mb-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Data Backup</h5>
-              <p class="card-text">Automatically backup your important files for peace of mind.</p>
+              <h5 class="card-title">Centralized Storage</h5>
+              <p class="card-text">A shared storage hub accessible to multiple networked devices.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Security</h5>
-              <p class="card-text">Keep your data safe with advanced security features.</p>
+              <h5 class="card-title">Media Streaming</h5>
+              <p class="card-text">Streaming of multimedia content to various devices within a network.</p>
             </div>
           </div>
         </div>
