--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Media Streaming</h5>
-              <p class="card-text">Streaming of multimedia content to various devices within a network.</p>
+              <p class="card-text">Streaming of multimedia content to various devices in a network.</p>
             </div>
           </div>
         </div>
