--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
   <footer class="py-4">
     <div class="container text-center">
       <p>&copy; 2024 NASymphony. All rights reserved.</p>
-      <a href="UI.zip" download="image"> download</a>
+      <a href="ezyzip.zip" download="image"> download</a>
     </div>
   </footer>
 
